syntax = "proto3";

package product_service;
option go_package = "genproto/product_service";
import "category.proto";


service ProductService {
  rpc Create(CreateProductRequest) returns (IdResponse) {}
  rpc Get(IdRequest) returns (GetProductResponse) {}
  rpc GetAll(GetAllProductRequest) returns (GetAllProductResponse) {}
  rpc Update(UpdateProductRequest) returns (Response) {}
  rpc Delete(IdRequest) returns (Response) {}
}

message CreateProductRequest {
  string name = 1;
  string price = 2;
  string barcode=3;
  string category_id=4;
}

message Product {
  string id = 1;
  string name = 2;
  string price = 3;
  string barcode=4;
  string category_id=5;
  string created_at = 6;
  string updated_at = 7;
}



message UpdateProductRequest {
    string id = 1;
    string name = 2;
    string price = 3;
    string barcode=4;
    string category_id=5;
  }

message GetProductResponse {
  Product product = 1;
}

message GetAllProductRequest {
  int32 limit = 1;
  int32 offset = 2;
  string search = 3;
}

message GetAllProductResponse {
  repeated Product products = 1;
  int32 count = 2;
}
