syntax = "proto3";

package staff_service;
option go_package = "genproto/staff_service";
 import "staff.proto";


service StaffTarifService {
  rpc Create(CreateStaffTarifRequest) returns (IdResponse) {}
  rpc Get(IdRequest) returns (GetStaffTarifResponse) {}
  rpc GetAll(GetAllStaffTarifRequest) returns (GetAllStaffTarifResponse) {}
  rpc Update(UpdateStaffTarifRequest) returns (Response) {}
  rpc Delete(IdRequest) returns (Response) {}
}

message CreateStaffTarifRequest {
  string name = 1;
  string type = 2;
  string amountForCash = 3;
  string amountForCard = 4;
}

message StaffTarif {
  string id = 1;
  string name = 2;
  string type = 3;
  string amountForCash = 4;
  string amountForCard = 5;
  string created_at = 6;
 string updated_at = 7;
}



message UpdateStaffTarifRequest {
    string id = 1;
    string name = 2;
    string type = 3;
    string amountForCash = 4;
    string amountForCard = 5;
}

message GetStaffTarifResponse {
  StaffTarif tarif = 1;
}

message GetAllStaffTarifRequest {
  int32 limit = 1;
  int32 offset = 2;
  string search = 3;
}

message GetAllStaffTarifResponse {
  repeated StaffTarif staffTarifs = 1;
  int32 count = 2;
}

